--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,6 @@
 
 
-.main img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
-    width: 200px;
-}
-
-/* Footer styles */
-.footer {
-    text-align: center;
-}
-
-.footer a {
-    color: blue;
-    text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
-}   body {
-    font-family: Arial, sans-serif;
-}
-h1, h2 {
-    color: #6c757d; /* Dark gray */
-} body {
-    font-family: Arial, sans-serif;
-}
+.
 
 /* Header styles */
 .header {
